Midcampus trips added. There are some artefacts which are in the data so it is hard to do anything with it. They mainly treat about the electric vehicles.

--- a/environment.yaml
+++ b/environment.yaml
@@ -13,6 +13,7 @@ dependencies:
     - ipykernel
     - pyreadstat
     - openpyxl
+    - xlsxwriter
     - pytest
     - jupyter
     - --editable .
